--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
         {
             "type": "chrome",
             "request": "launch",
             "name": "Open index.html",
-            "file": "/Users/Yanni/Downloads/startbootstrap-personal-gh-pages/index.html"
+            "file": "/Users/Yanni/Downloads/A'Yanna Rouse's Portfolio/index.html"
         }
     ]
 }
